@@ -1,7 +1,7 @@
 #!/usr/bin/env python3
 # -*- Mode: python; tab-width: 4; indent-tabs-mode:nil; coding:utf-8 -*-
 #
-# Copyright (c) 2019 Authors and contributors
+# Copyright (c) 2021 Authors and contributors
 # (see the file AUTHORS for the full list of names)
 #
 # Released under the GNU Public Licence, v2 or any higher version
@@ -62,19 +62,24 @@ class _AnalysisBase(base.AnalysisBase):
 
         with warnings.catch_warnings():
             warnings.simplefilter('always')
-            if self.begin > trajectory.totaltime:
+            if begin > trajectory.totaltime:
                 raise ValueError("Start ({:.2f} ps) is larer than total time "
-                                 "({:.2f} ps).".format(self.begin,
-                                                       trajectory.totaltime))
-            elif self.begin > 0:
+                                 "({:.2f} ps)."
+                                 "".format(begin, trajectory.totaltime))
+
+            if end is not None and end < trajectory.dt:
+                raise ValueError("End ({:.2f} ps) is smaller than a single "
+                                 "trajectory timestep ({:.2f} ps)."
+                                 "".format(end, trajectory.dt))
+
+            if begin > 0:
                 startframe = int(begin // trajectory.dt)
             else:
                 startframe = 0
-            if self.end is not None:
+            if end is not None:
                 stopframe = int(end // trajectory.dt)
-                self.end += 1  # catch also last frame in loops
             else:
-                stopframe = None
+                stopframe = trajectory.n_frames
             if self.dt > 0:
                 step = int(dt // trajectory.dt)
             else:
