@@ -11,9 +11,11 @@ The rules for this file:
   * keep the format consistent (79 char width, Y/M/D date format) and do not
     use tabs but use spaces for formatting
 
-XXXX/XX/XX
+XXXX/XX/XX Philip Loche
 
   * 0.4
+
+  * Raise error if end is to small (#40)
 
 2020/03/03 Philip Loche, Amanuel Wolde-Kidan
 
